# OnedriveHashSyncApp

./: .gitignore  Cargo.toml
src/: config.rs  hash_util.rs  json_util.rs  log_util.rs  main.rs  onedrive_api.rs  onedrive_util.rs  quick_xor_hash  webserver.rs
statics/: index.html
